# asi-race

./: .gitattributes  .gitignore  CHANGELOG.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  index.html  package.json
.github/workflows/: release.yml
assets/textures/: LICENSE.txt
bridge/: server.mjs
css/: style.css
docs/: python-bridge.md  python-bridge.zh-CN.md
js/: main.js
js/audio/: audio.js
js/bridge/: live.js  protocol.js
js/shared/: height.js
js/sim/: ai.js  constants.js  fog.js  industry.js  pathfind.js  rng.js  sim.js  world.js
js/ui/: hud.js  tutorial.js
js/view/: buildings.js  characters.js  effects.js  fog.js  renderer.js  terrain.js  theme.js  view.js  weather.js
packaging/: build-zips.sh
packaging/macos/: Info.plist  run  使用说明.txt  启动游戏.command
packaging/windows/: launcher.ps1  使用说明.txt  启动游戏.cmd
python/: pyproject.toml
python/asirace/: __init__.py  game.py  transport.py
python/examples/: live_control.py  quickstart.py  scripted_bot.py
python/tests/: test_smoke.py
test/: bridge.mjs  headless.mjs
